tests/ui/pub/pub-restricted-error.rs
struct Bar(pub(()));

struct Foo {
    pub(crate) () foo: usize, //~ ERROR expected identifier
}

fn main() {}
